[gd_scene load_steps=7 format=3 uid="uid://c64ogky21ax0g"]

[ext_resource type="Script" path="res://scenes/stage_clear/stage_clear.gd" id="1_7yo08"]
[ext_resource type="Theme" uid="uid://c6vj3xhhc2msf" path="res://assets/theme.tres" id="2_jottj"]
[ext_resource type="AudioStream" uid="uid://c5fhrjmgv37ru" path="res://assets/sfxr/stage_clear.sfxr" id="3_8v371"]

[sub_resource type="Animation" id="Animation_gxmu4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1j5tu"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnoix"]
_data = {
"RESET": SubResource("Animation_gxmu4"),
"fade_in": SubResource("Animation_1j5tu")
}

[node name="StageClear" type="CanvasLayer"]
script = ExtResource("1_7yo08")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jottj")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="StageClearText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Stage clear!"
horizontal_alignment = 1

[node name="CurrentScore" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Current score: 1234"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jnoix")
}

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8v371")
